# Kopi-challengue

./: Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
src/chatbot/: bootstrap.py
src/chatbot/adapters/api/: main.py  models.py
src/chatbot/adapters/llm/: openai_provider.py
src/chatbot/adapters/storage/: in_memory.py  redis_repository.py
src/chatbot/domain/: models.py  ports.py  services.py
tests/: conftest.py  test_integration.py
tests/adapters/api/: test_main.py
tests/adapters/storage/: test_in_memory.py  test_redis_repository.py
tests/domain/: test_chat_service.py  test_services.py
