[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kopi-chatbot"
version = "1.0.0"
description = "A conversational debate chatbot."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "redis",
    "fakeredis"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "httpx",
    "pytest-httpx"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
pythonpath = ["src"]